--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,57 @@
-.env
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 # Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env*
+
+# Dependencies
+**/node_modules/
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/.pnp
+**/.pnp.*
+**/package-lock.json
+**/yarn.lock
+
+# Next.js build outputs
+**/.next/
+**/out/
+**/build/
+**/dist/
+
+# Next.js cache and temporary files
+**/.next/
+**/next-env.d.ts
+**/*.tsbuildinfo
+
+# Vercel deployment
+**/.vercel/
+
+# Testing
+**/coverage/
+**/*.lcov
+**/.nyc_output
 
 # Logs
-logs
+logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/lerna-debug.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.test
-
 # Prisma
-# Generated Prisma client
-prisma/generated/
+**/prisma/generated/
+**/prisma/migrations/**/*.snapshot.json
 
 # IDE and Editor files
 .vscode/
@@ -63,6 +59,7 @@ prisma/generated/
 *.swp
 *.swo
 *~
+*.sublime-*
 
 # OS generated files
 .DS_Store
@@ -74,13 +71,42 @@ ehthumbs.db
 Thumbs.db
 
 # Docker
-.dockerignore
+**/.dockerignore
 
-# Build outputs
-dist/
-build/
-
-# Temporary folders
+# Temporary folders and files
 tmp/
 temp/
+*.tmp
+*.temp
 
+# Optional npm cache directory
+**/.npm
+
+# Optional REPL history
+**/.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+**/.yarn-integrity
+
+# TypeScript
+*.tsbuildinfo
+
+# ESLint cache
+**/.eslintcache
+
+# Prettier cache
+**/.prettierignore
+
+# Webpack bundles
+**/webpack-stats.json
+
+# Storybook build outputs
+**/storybook-static/
+
+# Miscellaneous
+*.pem
+*.key
+*.cert
