config: conecta frontend com api de produção

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,18 @@ services:
       - key: DATABASE_URL
         sync: false
 
+  - type: web
+    name: leads-frontend
+    env: node
+    plan: free
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: NEXT_PUBLIC_API_URL
+        sync: false
+
 databases:
   - name: leads-db
     databaseName: leadsdb
